# Parking-Lot-System-Testing

./: CMakeLists.txt  Parking Lot System.sln  Parking Lot System.vcxproj  Parking Lot System.vcxproj.filters  README.md
Parking .EAB43DA5/x64/Debug/: Parking Lot System.exe.recipe  vc145.idb
Parking .EAB43DA5/x64/Debug/Parking .EAB43DA5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Parking Lot System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ParkingLotTests/: ParkingLotTests.vcxproj  packages.config  test.cpp
ParkingLotTests/x64/Debug/: ParkingLotTests.exe.recipe  ParkingLotTests.vcxproj.FileListAbsolute.txt
ParkingLotTests/x64/Debug/ParkingLotTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: 01_initialization.mmd  02_park_vehicle.mmd  03_remove_vehicle.mmd  04_view_available_slots.mmd  05_search_vehicle.mmd  06_view_parking_status.mmd  parking_class_diagram.mmd  srs.docx  srs.md
src/: ParkingConsole.cpp  ParkingConsole.h  ParkingRepository.cpp  ParkingRepository.h  ParkingService.cpp  ParkingService.h  Slot.h  Vehicle.h  main.cpp
x64/Debug/: ParkingLotTests.exe.gta.testdurations  XMLGoogleTestResults.xml  parking.json
